fixes for scrollbars in iframe

--- a/less/style.less
+++ b/less/style.less
@@ -22,6 +22,10 @@
   }
 }
 
+body.iframe-body {
+  overflow: hidden;
+}
+
 a.link {
   cursor: pointer;
 }
@@ -242,4 +246,3 @@ code {
     margin-right: 8px;
   }
 }
-
